tests/typing/bad/testfile-recursive-3.go
package main

type A struct { b B }
func main() {}
type B struct { a A }
